# sitemap-rs

./: Cargo.toml  LICENSE  Makefile  README.md  sailfish.toml
src/: config.rs  file.rs  main.rs  query.rs
src/sql/: page.sql
tpl/: sitemap.xml  sitemap_index.xml
